--- a/src/app/treasurer/dashboard/dashboard.component.html
+++ b/src/app/treasurer/dashboard/dashboard.component.html
@@ -135,6 +135,9 @@
                 <a class="dropdown-item" [routerLink]="['/property/create']"
                   >Property</a
                 >
+                <a class="dropdown-item" [routerLink]="['/trust/create']"
+                  >Trust</a
+                >
                 <!-- <a class="dropdown-item" href="Office">Office</a>
                 <a
                   class="dropdown-item"
