--- a/src/app/trust/addmeeting/addmeeting.component.html
+++ b/src/app/trust/addmeeting/addmeeting.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="meetingForm" (ngSubmit)="onSubmit()">
   <div class="col-12">
-    <div class="card">
+    <div class="">
       <div class="card-body">
         <div class="form-group mb-3">
           <label for="simpleinput"><b>Title</b></label>
