--- a/src/app/trust/addaudit/addaudit.component.html
+++ b/src/app/trust/addaudit/addaudit.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="auditForm" (ngSubmit)="onAdd()">
   <div class="col-12">
-    <div class="card">
+    <div class="">
       <div class="card-body">
         <div class="form-group mb-3">
           <label for="simpleinput"><b>Year</b></label>
@@ -19,91 +19,85 @@
               Year Must be Valid And Only Alphanumeric Allowed
             </div>
           </div>
-          <div class="form-group mb-3">
-            <label for="simpleinput"><b>Audit Date</b></label>
-            <input
-              type="date"
-              class="form-control"
-              placeholder=""
-              formControlName="date"
-              [ngClass]="{
-                'is-invalid': submitted && f.date.errors
-              }"
-            />
-            <div *ngIf="submitted && f.date.errors" class="invalid-feedback">
-              <div *ngIf="f.date.errors.required">Audit Date is Required</div>
-              <div *ngIf="f.date.errors.pattern">
-                Audit Date Must be Valid And Only Alphanumeric Allowed
-              </div>
+        </div>
+        <div class="form-group mb-3">
+          <label for="simpleinput"><b>Audit Date</b></label>
+          <input
+            type="date"
+            class="form-control"
+            placeholder=""
+            formControlName="date"
+            [ngClass]="{
+              'is-invalid': submitted && f.date.errors
+            }"
+          />
+          <div *ngIf="submitted && f.date.errors" class="invalid-feedback">
+            <div *ngIf="f.date.errors.required">Audit Date is Required</div>
+            <div *ngIf="f.date.errors.pattern">
+              Audit Date Must be Valid And Only Alphanumeric Allowed
             </div>
-            <div class="form-group mb-3">
-              <label for="simpleinput"><b>Name</b></label>
-              <input
-                type="text"
-                class="form-control"
-                placeholder=""
-                formControlName="name"
-                [ngClass]="{
-                  'is-invalid': submitted && f.name.errors
-                }"
-              />
-              <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-                <div *ngIf="f.name.errors.required">Name is Required</div>
-                <div *ngIf="f.name.errors.pattern">
-                  Name Must be Valid And Only Alphanumeric Allowed
-                </div>
-              </div>
-              <div class="form-group mb-3">
-                <label for="simpleinput"><b>Email</b></label>
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder=""
-                  formControlName="email"
-                  [ngClass]="{
-                    'is-invalid': submitted && f.email.errors
-                  }"
-                />
-                <div
-                  *ngIf="submitted && f.email.errors"
-                  class="invalid-feedback"
-                >
-                  <div *ngIf="f.email.errors.required">Email is Required</div>
-                  <div *ngIf="f.email.errors.pattern">
-                    Email Must be Valid And Only Alphanumeric Allowed
-                  </div>
-                </div>
-                <div class="form-group mb-3">
-                  <label for="simpleinput"><b>Mobile</b></label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder=""
-                    formControlName="mobile"
-                    [ngClass]="{
-                      'is-invalid': submitted && f.mobile.errors
-                    }"
-                  />
-                  <div
-                    *ngIf="submitted && f.mobile.errors"
-                    class="invalid-feedback"
-                  >
-                    <div *ngIf="f.mobile.errors.required">
-                      Mobile is Required
-                    </div>
-                    <div *ngIf="f.mobile.errors.pattern">
-                      Mobile Must be Valid And Only Alphanumeric Allowed
-                    </div>
-                    <span
-                      *ngIf="
-                        f.mobile.errors.maxlength || f.mobile.errors.minlength
-                      "
-                    >
-                      Mobile Must be 10 Digit Only
-                    </span>
-                  </div>
-
-                  <!-- <form
+          </div>
+        </div>
+        <div class="form-group mb-3">
+          <label for="simpleinput"><b>Name</b></label>
+          <input
+            type="text"
+            class="form-control"
+            placeholder=""
+            formControlName="name"
+            [ngClass]="{
+              'is-invalid': submitted && f.name.errors
+            }"
+          />
+          <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+            <div *ngIf="f.name.errors.required">Name is Required</div>
+            <div *ngIf="f.name.errors.pattern">
+              Name Must be Valid And Only Alphanumeric Allowed
+            </div>
+          </div>
+        </div>
+        <div class="form-group mb-3">
+          <label for="simpleinput"><b>Email</b></label>
+          <input
+            type="text"
+            class="form-control"
+            placeholder=""
+            formControlName="email"
+            [ngClass]="{
+              'is-invalid': submitted && f.email.errors
+            }"
+          />
+          <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            <div *ngIf="f.email.errors.required">Email is Required</div>
+            <div *ngIf="f.email.errors.pattern">
+              Email Must be Valid And Only Alphanumeric Allowed
+            </div>
+          </div>
+        </div>
+        <div class="form-group mb-3">
+          <label for="simpleinput"><b>Mobile</b></label>
+          <input
+            type="text"
+            class="form-control"
+            placeholder=""
+            formControlName="mobile"
+            [ngClass]="{
+              'is-invalid': submitted && f.mobile.errors
+            }"
+          />
+          <div *ngIf="submitted && f.mobile.errors" class="invalid-feedback">
+            <div *ngIf="f.mobile.errors.required">Mobile is Required</div>
+            <div *ngIf="f.mobile.errors.pattern">
+              Mobile Must be Valid And Only Alphanumeric Allowed
+            </div>
+            <span
+              *ngIf="f.mobile.errors.maxlength || f.mobile.errors.minlength"
+            >
+              Mobile Must be 10 Digit Only
+            </span>
+          </div>
+        </div>
+        <!-- <form
                     action="https://coderthemes.com/"
                     method="post"
                     class="dropzone dz-clickable"
@@ -125,19 +119,14 @@
                     </div>
                   </form> -->
 
-                  <div class="mt-3">
-                    <button
-                      class="btn-primary btn-md btn-block btn waves-effect waves-light"
-                      type="submit"
-                      id="todo-btn-submit"
-                    >
-                      Add
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="mt-3">
+          <button
+            class="btn-primary btn-md btn-block btn waves-effect waves-light"
+            type="submit"
+            id="todo-btn-submit"
+          >
+            Add
+          </button>
         </div>
       </div>
     </div>
