--- a/src/app/trust/addfund/addfund.component.html
+++ b/src/app/trust/addfund/addfund.component.html
@@ -1,6 +1,6 @@
 <form class="form-row" [formGroup]="fundForm" (ngSubmit)="addFund()">
   <div class="col-12">
-    <div class="card">
+    <div class="">
       <div class="card-body">
         <div class="form-group mb-3">
           <label for="simpleinput"><b>Fund Amount:</b></label>
@@ -43,29 +43,27 @@
               Fund Reg.Date is Required
             </div>
           </div>
-          <div class="form-group mb-3">
-            <label for="simpleinput"><b>Fund Reg.Year</b></label>
-            <input
-              type="text"
-              class="year-own form-control"
-              type="year"
-              placeholder=""
-              formControlName="fundyear"
-              [ngClass]="{
-                'is-invalid': submitted && f.fundyear.errors
-              }"
-            />
-            <div
-              *ngIf="submitted && f.fundyear.errors"
-              class="invalid-feedback"
-            >
-              <div *ngIf="f.fundyear.errors.required">
-                Fund Reg.Year is Required
-              </div>
+        </div>
+        <div class="form-group mb-3">
+          <label for="simpleinput"><b>Fund Reg.Year</b></label>
+          <input
+            type="text"
+            class="year-own form-control"
+            type="year"
+            placeholder=""
+            formControlName="fundyear"
+            [ngClass]="{
+              'is-invalid': submitted && f.fundyear.errors
+            }"
+          />
+          <div *ngIf="submitted && f.fundyear.errors" class="invalid-feedback">
+            <div *ngIf="f.fundyear.errors.required">
+              Fund Reg.Year is Required
             </div>
           </div>
+        </div>
 
-          <!-- <form
+        <!-- <form
             action="https://coderthemes.com/"
             method="post"
             class="dropzone dz-clickable"
@@ -87,15 +85,14 @@
             </div>
           </form> -->
 
-          <div class="mt-3">
-            <button
-              class="btn-primary btn-md btn-block btn waves-effect waves-light"
-              type="submit"
-              id="todo-btn-submit"
-            >
-              Add
-            </button>
-          </div>
+        <div class="mt-3">
+          <button
+            class="btn-primary btn-md btn-block btn waves-effect waves-light"
+            type="submit"
+            id="todo-btn-submit"
+          >
+            Add
+          </button>
         </div>
       </div>
     </div>
