--- a/src/app/trust/trust-create/trust-create.component.html
+++ b/src/app/trust/trust-create/trust-create.component.html
@@ -180,7 +180,7 @@
                 Trustees/Manager/Mantri/CA/Auditors
                 <hr />
               </h5>
-              <div class="container">
+              <div class="container-fluid">
                 <div formArrayName="trustees">
                   <div
                     class="form-group mb-3 col-12"
