--- a/src/app/trust/trust-properties/trust-properties.component.html
+++ b/src/app/trust/trust-properties/trust-properties.component.html
@@ -21,7 +21,7 @@
           >Add New Property</a
         >
 
-        <a class="dropdown-item" [routerLink]="['/trust/addexiting']"
+        <a class="dropdown-item" [routerLink]="['/trust/addexiting/' + trustID]"
           >Add form Existing</a
         >
       </div>
