--- a/src/app/treasurer/trust-list/trust-list.component.html
+++ b/src/app/treasurer/trust-list/trust-list.component.html
@@ -17,7 +17,7 @@
               data-toggle="modal"
               data-target="#myModal"
               style="margin-bottom: 15px"
-              [routerLink]="['/trust/create']"
+              [routerLink]="['/trust/create-trust']"
             >
               Add New Trust
             </button>
