--- a/src/app/trust/trust-create/trust-create.component.html
+++ b/src/app/trust/trust-create/trust-create.component.html
@@ -1,19 +1,8 @@
-<div class="row">
-  <div class="col-12">
-    <div class="page-title-box">
-      <div class="page-title-right">
-        <ol class="breadcrumb m-0">
-          <!--<li class="breadcrumb-item"><a href="javascript: void(0);">UBold</a></li>-->
-          <li class="breadcrumb-item">
-            <a href="ts-l-index.html"> Title Search</a>
-          </li>
-          <li class="breadcrumb-item active">Assignments</li>
-        </ol>
-      </div>
-
-      <h4 class="page-title">Add New Trust</h4>
-    </div>
-  </div>
+<div class="">
+  <app-page-title
+    title="Add New Trust"
+    [breadcrumbItems]="breadCrumbItems"
+  ></app-page-title>
 </div>
 <div class="row">
   <div class="col-12">
@@ -28,13 +17,13 @@
           <div class="col-lg-12">
             <form class="form-row" [formGroup]="trustForm" (ngSubmit)="save()">
               <div class="form-group mb-3 col-md-6">
-                <label for="simpleinput">Trust Name</label>
+                <label for="simpleinput">Trust Name *</label>
 
                 <input
                   type="text"
                   id="simpleinput"
                   class="form-control"
-                  placeholder=""
+                  placeholder="Trust Name"
                   formControlName="TrustName"
                   [ngClass]="{
                     'is-invalid': submitted && f.TrustName.errors
@@ -53,12 +42,12 @@
                 </div>
               </div>
               <div class="form-group mb-3 col-md-6">
-                <label for="simpleinput">Registration No.</label>
+                <label for="simpleinput">Registration No. *</label>
                 <input
                   type="text"
                   id="simpleinput"
                   class="form-control"
-                  placeholder=""
+                  placeholder="Registration No"
                   formControlName="RegistrationORNondhniNo"
                   [ngClass]="{
                     'is-invalid': submitted && f.RegistrationORNondhniNo.errors
@@ -77,7 +66,7 @@
                 </div>
               </div>
               <div class="form-group mb-3 col-md-6">
-                <label for="example-date">Registration Date</label>
+                <label for="example-date">Registration Date *</label>
                 <input
                   class="form-control"
                   id="example-date"
@@ -99,12 +88,12 @@
               </div>
 
               <div class="form-group mb-3 col-md-6">
-                <label for="simpleinput">Email</label>
+                <label for="simpleinput">Email *</label>
                 <input
                   type="text"
                   id="simpleinput"
                   class="form-control"
-                  placeholder=""
+                  placeholder="Email ID"
                   formControlName="TrustEmailId"
                   [ngClass]="{
                     'is-invalid': submitted && f.TrustEmailId.errors
@@ -123,12 +112,12 @@
                 </div>
               </div>
               <div class="form-group mb-3 col-md-6">
-                <label for="simpleinput">Mobile</label>
+                <label for="simpleinput">Mobile *</label>
                 <input
                   type="text"
                   id="simpleinput"
                   class="form-control"
-                  placeholder=""
+                  placeholder="Mobile No"
                   formControlName="TrustPhoneNo"
                   [ngClass]="{
                     'is-invalid': submitted && f.TrustPhoneNo.errors
@@ -155,11 +144,12 @@
                 </div>
               </div>
               <div class="form-group mb-3 col-md-6">
-                <label for="example-textarea">Address</label>
+                <label for="example-textarea">Address *</label>
                 <textarea
                   class="form-control"
                   id="example-textarea"
                   rows="3"
+                  placeholder="Address"
                   formControlName="TrustAddress"
                   [ngClass]="{
                     'is-invalid': submitted && f.TrustAddress.errors
@@ -182,6 +172,7 @@
                 <textarea
                   class="form-control"
                   id="example-textarea"
+                  placeholder="Process Of Appointment"
                   rows="3"
                   formControlName="ProcessAppointmentTrustee"
                   [ngClass]="{
@@ -222,12 +213,12 @@
                     <div [formGroupName]="i">
                       <div class="form-row">
                         <div class="form-group col-md-6 mb-3">
-                          <label for="simpleinput">Name</label>
+                          <label for="simpleinput">Name *</label>
                           <input
                             type="text"
                             id="simpleinput"
                             class="form-control"
-                            placeholder=""
+                            placeholder="Name"
                             formControlName="Name"
                             [ngClass]="{
                               'is-invalid':
@@ -263,12 +254,12 @@
                           </div>
                         </div>
                         <div class="form-group mb-3 col-md-6">
-                          <label for="simpleinput">Email</label>
+                          <label for="simpleinput">Email ID*</label>
                           <input
                             type="text"
                             id="simpleinput"
                             class="form-control"
-                            placeholder=""
+                            placeholder="Email ID"
                             formControlName="Email"
                             [ngClass]="{
                               'is-invalid':
@@ -304,12 +295,12 @@
                           </div>
                         </div>
                         <div class="form-group mb-3 col-md-6">
-                          <label for="simpleinput">Mobile</label>
+                          <label for="simpleinput">Mobile *</label>
                           <input
                             type="text"
                             id="simpleinput"
                             class="form-control"
-                            placeholder=""
+                            placeholder="Mobile No"
                             formControlName="Mobile"
                             [ngClass]="{
                               'is-invalid':
@@ -355,7 +346,7 @@
                           </div>
                         </div>
                         <div class="form-group mb-3 col-md-6">
-                          <label for="example-select">Select</label>
+                          <label for="example-select">User Type *</label>
                           <ng-select
                             class="form-control"
                             id="example-select"
@@ -388,15 +379,16 @@
                                   .TrusteeUsertypeID.errors.required
                               "
                             >
-                              TrusteeType is Required
+                              Trustee Type is Required
                             </div>
                           </div>
                         </div>
                         <div class="form-group mb-3 col-md-6">
-                          <label for="example-textarea">Address</label>
+                          <label for="example-textarea">Address *</label>
                           <textarea
                             class="form-control"
                             id="example-textarea"
+                            placeholder="Address"
                             rows="3"
                             formControlName="Address"
                             [ngClass]="{
@@ -434,7 +426,7 @@
                           </div>
                         </div>
                         <div class="form-group mb-3 col-md-6">
-                          <label for="example-date">Start Date</label>
+                          <label for="example-date">Start Date *</label>
                           <input
                             class="form-control"
                             id="example-date"
